--- a/android app/app/src/main/res/layout/item_movie_poster.xml
+++ b/android app/app/src/main/res/layout/item_movie_poster.xml
@@ -1,12 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="120dp"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:layout_marginEnd="8dp">
+
 
     <ImageView
         android:id="@+id/imagePoster"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:background="@drawable/black_border_bg" />
+        android:layout_height="150dp"
+    android:scaleType="centerCrop"
+    android:layout_margin="0dp" />
+
 </FrameLayout>
