--- a/android app/app/src/main/res/layout/activity_login.xml
+++ b/android app/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
             android:layout_marginEnd="8dp"
             android:ems="10"
             android:hint="Password"
-            android:inputType="text"
+            android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
