--- a/android app/app/src/main/res/layout/activity_navigation.xml
+++ b/android app/app/src/main/res/layout/activity_navigation.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/homepage_png"
+    android:background="@drawable/csaponelkuli"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="24dp">
@@ -11,20 +11,20 @@
         android:id="@+id/ivPoster"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/circle_background"
         android:scaleType="centerCrop"
         android:src="@drawable/home_png_kor" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="315dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/button_container_bg"
         android:elevation="6dp"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="22dp">
 
 
         <Button
