--- a/android app/app/src/main/res/layout/activity_watchlist.xml
+++ b/android app/app/src/main/res/layout/activity_watchlist.xml
@@ -9,12 +9,12 @@
         android:id="@+id/textWatchlistTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Watchlist"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="24dp"
-        />
+        android:text="Watchlist"
+        android:textColor="#1A475F"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerWatchlist"
@@ -27,7 +27,11 @@
         android:id="@+id/btnBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#e9e9e9"
         android:text="Back"
-        android:layout_marginTop="16dp"/>
+        android:textAllCaps="false"
+        android:textColor="#1A475F"
+        android:textSize="18sp" />
 
 </LinearLayout>
