--- a/android app/app/src/main/res/layout/fragment_home.xml
+++ b/android app/app/src/main/res/layout/fragment_home.xml
@@ -35,20 +35,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Üdv, Felhasználó!"
+                android:textColor="#1A475F"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="#000000" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Kedvenc filmek -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your Favorites"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:paddingBottom="8dp"
-            android:textColor="#1A1A1A" />
+            android:text="Your Favorites"
+            android:textColor="#1A475F"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerPopularMovies"
@@ -62,12 +62,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your Reviewed Movies"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:paddingTop="12dp"
             android:paddingBottom="8dp"
-            android:textColor="#1A1A1A" />
+            android:text="Your Reviewed Movies"
+            android:textColor="#1A475F"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerRecommendedMovies"
@@ -80,13 +80,13 @@
             android:id="@+id/textMovieRecommendation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Movie Recommendation"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="#1A1A1A"
-            android:gravity="center"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="12dp" />
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="Movie Recommendation"
+            android:textColor="#1A475F"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <!-- Ajánlott film képe – kisebb szélességgel -->
         <ImageView
