--- a/android app/app/src/main/res/layout/activity_login.xml
+++ b/android app/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <ImageView
+            android:id="@+id/imageView3"
+            android:src="@drawable/loginkep"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            />
+
         <TextView
             android:id="@+id/UsernameView"
             android:layout_width="162dp"
@@ -31,6 +44,7 @@
             android:layout_marginEnd="8dp"
             android:text="Username"
             android:textAlignment="center"
+            android:textColor="#FBFBFB"
             android:textColorLink="#000000"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +62,8 @@
             android:layout_marginEnd="8dp"
             android:text="Password"
             android:textAlignment="center"
+            android:textColor="#FBFBFB"
+            android:textColorHint="#FBFBFB"
             android:textColorLink="#000000"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,6 +81,8 @@
             android:ems="10"
             android:hint="Username"
             android:inputType="text"
+            android:textColor="#FBFBFB"
+            android:textColorHint="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +98,8 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColor="#FBFBFB"
+            android:textColorHint="#FBFBFB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +151,7 @@
             android:clickable="true"
             android:focusable="true"
             android:text="Don't have an account? Create one"
-            android:textColor="#577789"
+            android:textColor="#0A99ED"
             android:textColorLink="#7B8080"
             android:textSize="16sp"
             android:textStyle="bold"
