--- a/android app/app/src/main/res/layout/activity_profile.xml
+++ b/android app/app/src/main/res/layout/activity_profile.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BFC7CE"
+    android:background="@drawable/settings"
     android:padding="24dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
 
         <!-- Fejléc -->
         <TextView
@@ -18,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="Edit your profile"
-            android:textColor="#1A475F"
+            android:textColor="#F2F3F6"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -29,7 +33,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:hint="Enter your name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:textColor="#F2F3F6"
+            android:textColorHint="#F2F3F6" />
 
         <!-- Profilképek sáv -->
         <TextView
@@ -38,7 +45,7 @@
             android:layout_gravity="start"
             android:layout_marginBottom="12dp"
             android:text="Choose your profile picture"
-            android:textColor="#1A475F"
+            android:textColor="#F2F3F6"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -57,7 +64,7 @@
             android:layout_gravity="start"
             android:layout_marginTop="16dp"
             android:text="Description"
-            android:textColor="#1A475F"
+            android:textColor="#F2F3F6"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -70,7 +77,9 @@
             android:hint="Write something about yourself..."
             android:inputType="textMultiLine"
             android:maxLines="10"
-            android:minLines="3" />
+            android:minLines="3"
+            android:textColor="#F2F3F6"
+            android:textColorHint="#F2F3F6" />
 
 
         <!-- Mentés gomb -->
@@ -79,6 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="@drawable/text_field_background"
             android:backgroundTint="#e9e9e9"
             android:text="Save Changes"
             android:textAllCaps="false"
