--- a/android app/app/src/main/res/layout/activity_registration.xml
+++ b/android app/app/src/main/res/layout/activity_registration.xml
@@ -24,6 +24,19 @@
         app:layout_constraintVertical_bias="0.0">
 
         <ImageView
+            android:id="@+id/imageView2"
+            android:src="@drawable/film"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            />
+
+        <ImageView
             android:id="@+id/backArrow"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -33,27 +46,9 @@
             android:contentDescription="Vissza"
             android:focusable="true"
             android:padding="8dp"
-            android:src="@drawable/back_arrow"
+            android:src="@drawable/visszafeher"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <FrameLayout
-            android:id="@+id/my_frame"
-            android:layout_width="330dp"
-            android:layout_height="661dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/button_container_bg"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-        </FrameLayout>
 
         <Button
             android:id="@+id/RegistrationB"
@@ -61,14 +56,15 @@
             android:layout_height="49dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#e9e9e9"
+            android:backgroundTint="#E2814D"
             android:text="Registration"
             android:textAllCaps="false"
-            android:textColor="#1A475F"
+            android:textColor="#191B1D"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/PasswordText" />
+
 
         <EditText
             android:id="@+id/PasswordText"
@@ -79,6 +75,8 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/DateText" />
@@ -88,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="First Name"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/FirstNameText"
             app:layout_constraintStart_toStartOf="@+id/FirstNameText" />
 
@@ -100,6 +99,8 @@
             android:hint="Von"
             android:inputType="text"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -113,6 +114,8 @@
             android:hint="example@example.com"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
@@ -126,6 +129,8 @@
             android:hint="06301112233"
             android:inputType="phone"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/EmailText" />
@@ -139,6 +144,8 @@
             android:hint="John"
             android:inputType="text"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />
@@ -148,6 +155,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last Name"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/LastNameText"
             app:layout_constraintStart_toStartOf="@+id/LastNameText" />
 
@@ -160,6 +168,8 @@
             android:hint="MonkeyDuck"
             android:inputType="text"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/LastNameText" />
@@ -169,6 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Name"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/editTextText3"
             app:layout_constraintStart_toStartOf="@+id/editTextText3" />
 
@@ -177,6 +188,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email Address"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/EmailText"
             app:layout_constraintStart_toStartOf="@+id/EmailText" />
 
@@ -185,6 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Phone Number"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
             app:layout_constraintStart_toStartOf="@+id/editTextPhone" />
 
@@ -197,6 +210,8 @@
             android:hint="Date of Birth"
             android:inputType="date"
             android:minHeight="48dp"
+            android:textColor="#EBE4E4"
+            android:textColorHint="#EBE4E4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
@@ -206,6 +221,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date of Birth"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/DateText"
             app:layout_constraintStart_toStartOf="@+id/DateText" />
 
@@ -214,6 +230,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
+            android:textColor="#EBE4E4"
             app:layout_constraintBottom_toTopOf="@+id/PasswordText"
             app:layout_constraintStart_toStartOf="@+id/PasswordText" />
 
@@ -223,7 +240,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Already have an account?"
-            android:textColor="#577789"
+            android:textColor="#0D93E4"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
